# ndk

./: .gitignore  Android.mk  CHANGELOG.md  MANIFEST.in  OWNERS  README.md  checkbuild.py  config.py  navbar.md  ndk-gdb.py  parse_elfnote.py  pylintrc  qa_config.json  qa_config.yaml  requirements.txt  run_tests.py  setup.py  test_libcxx.py  validate.py
.github/: ISSUE_TEMPLATE.md
docs/: .gitignore  ClangMigration.md  ContinuousBuilds.md  GeneratingSysroots.md  PlatformApis.md  Roadmap.md  Testing.md  Toolchains.md  UnifiedHeaders.md
docs/user/: StandaloneToolchains.md  common_problems.md  cpp-support.md  dac_template.jd  standalone_toolchain.md
infra/: windows_sysprep.ps1
infra/docker/: Dockerfile
meta/: abis.json
ndk/: abis.py  ansi.py  builds.py  config.py  debug.py  hosts.py  notify.py  os.py  packaging.py  paths.py  run_tests.py  test_os.py  timer.py  ui.py  win32.py  workqueue.py
ndk/ext/: shutil.py  subprocess.py  test_os.py
ndk/test/: builder.py  devices.py  report.py  result.py  spec.py  test_devices.py  test_paths.py  test_report.py  test_spec.py  test_workqueue.py  ui.py
ndk/testing/: standalone_toolchain.py
scripts/: create_windows_instance.py  gen_release_table.py  update_dac.py
sources/android/cpufeatures/: cpu-features.c  (+1 more)
sources/crt/: crtbrand.S
tests/: filters.py  ndk.py  printers.py  run-all.py  runners.py  test-libcxx.sh  test_libcxx.py  testlib.py  tests.py  util.py  validate.py
tests/device/static-executable/: CMakeLists.txt  test_config.py
tests/standalone/: run.sh
wrap.sh/: asan.mips32r6.sh  asan.mips64.sh
(+170 files in other folders)
